--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,15 @@
 [x] implement event parsing
 [x] implement stream splitting on events
-- implement connection with required headers and redirects handle
+[x] implement connection with required headers
+- implement lastId and retry handling
+- check auth wit firebase
+- validate input params
 
 - implement reconnects ?
 .
 - review phpDocs
-- finish SseClient
+
+- Make PHP 5.3 compatible ?
 
 - implement FirebaseStreamClient
 
