--- a/todo.txt
+++ b/todo.txt
@@ -2,7 +2,9 @@
 [x] implement stream splitting on events
 [x] implement connection with required headers
 [x] implement lastId and retry period handling
-- implement reconnection
+[x] implement reconnection
+- take into account HTTP 204 code
+- gracefully handle connection failure
 - check auth wit firebase
 - validate input params
 .
